agrego logo y modifico archvos css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
       <!-- color scheme -->
       <link rel="stylesheet" href="css/colors/scheme-5.css" type="text/css" />
+      <link rel="stylesheet" href="/public/css/portafolio.css" />
    </head>
 
    <body id="homepage">
@@ -44,15 +45,17 @@
                      <div id="logo">
                         <a href="#wrapper">
                            <img
-                              class="logo"
-                              src="images/logo-light.png"
+                              class="logo logo-3"
+                              src="/public/images/habilidades/Logo.png"
                               alt=""
                            />
-                           <img
-                              class="logo-2"
-                              src="images/logo-dark.png"
-                              alt=""
-                           />
+                           <div id="logo-1 logo-3">
+                              <img
+                                 class="logo-2"
+                                 src="/public/images/habilidades/Logo.png"
+                                 alt=""
+                              />
+                           </div>
                         </a>
                      </div>
                      <!-- logo close -->
@@ -64,30 +67,31 @@
                      <!-- mainmenu begin -->
                      <nav>
                         <ul id="mainmenu">
-                           <li>
+                           <li class="icon">
+                              <i class="fas fa-home"></i>
                               <a class="active" href="#top"
                                  >Inicio<span></span
                               ></a>
                            </li>
                            <li>
+                              <i class="fas fa-address-card"></i>
                               <a href="#section-about">Acerca<span></span></a>
                            </li>
                            <li>
+                              <i class="fas fa-atom"></i>
                               <a href="#section-services"
                                  >Habilidades<span></span
                               ></a>
                            </li>
                            <li>
+                              <i class="fas fa-briefcase"></i>
                               <a href="#section-portfolio"
                                  >Portafolio<span></span
                               ></a>
                            </li>
+
                            <li>
-                              <a href="#section-experiences"
-                                 >Experiences<span></span
-                              ></a>
-                           </li>
-                           <li>
+                              <i class="fas fa-phone-square-alt"></i>
                               <a href="#section-contact"
                                  >Contáctame<span></span
                               ></a>
@@ -159,8 +163,8 @@
                            / UX y Programación. Me encanta tener nuevas
                            experiencias y aprender siempre de mi entorno. He
                            hecho unos cuantos proyectos. Puedes consultarlo a
-                           través de portafolio sección de este sitio web.
-                           Espero con ansias cualquier oportunidades y desafíos.
+                           través de mi portafolio sección de este sitio web.
+                           Espero con ansias cualquier oportunidad y desafíos.
                         </p>
                      </div>
                   </div>
@@ -231,7 +235,7 @@
                                        <i class="fab fa-html5"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/img_html.jpg"
+                                             src="/public/images/habilidades/img_html.jpg"
                                              alt=""
                                           />
                                        </div>
@@ -247,7 +251,7 @@
                                        <i class="fab fa-css3-alt"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/img-css3.png"
+                                             src="/public/images/habilidades/img-css3.png"
                                              alt=""
                                           />
                                        </div>
@@ -263,7 +267,7 @@
                                        <i class="fab fa-js-square"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/img-javascript.png"
+                                             src="/public/images/habilidades/img-javascript.png"
                                              alt=""
                                           />
                                        </div>
@@ -279,7 +283,7 @@
                                        <i class="icon_tag_alt id-color"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/img-ajax.jpg"
+                                             src="/public/images/habilidades/img-ajax.jpg"
                                              alt=""
                                           />
                                        </div>
@@ -295,7 +299,7 @@
                                        <i class="fab fa-php"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/img-php.png"
+                                             src="/public/images/habilidades/img-php.png"
                                              alt=""
                                           />
                                        </div>
@@ -311,7 +315,7 @@
                                        <i class="icon_search id-color"></i>
                                        <div class="text">
                                           <img
-                                             src="/images/habilidades/mongodb.png"
+                                             src="/public/images/habilidades/mongodb.png"
                                              alt=""
                                           />
                                        </div>
@@ -378,7 +382,7 @@
                                     </span>
                                     <img
                                        class="img-proyectos"
-                                       src="/images/habilidades/camioneta1.jpg"
+                                       src="/public/images/habilidades/camioneta1.jpg"
                                        alt=""
                                     />
                                  </a>
@@ -401,7 +405,7 @@
                                        </span>
                                     </span>
                                     <img
-                                       src="/images/habilidades/imagen-camioneta2.jpg"
+                                       src="/public/images/habilidades/imagen-camioneta2.jpg"
                                        alt=""
                                     />
                                  </a>
@@ -424,7 +428,7 @@
                                        </span>
                                     </span>
                                     <img
-                                       src="/images/habilidades/img-hotel1.jpg"
+                                       src="/public/images/habilidades/img-hotel1.jpg"
                                        alt=""
                                     />
                                  </a>
@@ -449,7 +453,7 @@
                                        </span>
                                     </span>
                                     <img
-                                       src="/images/habilidades/img-hotel4.jpg"
+                                       src="/public/images/habilidades/img-hotel4.jpg"
                                        alt=""
                                     />
                                  </a>
@@ -474,7 +478,7 @@
                                        </span>
                                     </span>
                                     <img
-                                       src="/images/habilidades/header.jpg"
+                                       src="/public/images/habilidades/header.jpg"
                                        alt=""
                                     />
                                  </a>
