--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
    <head>
       <meta charset="utf-8" />
-      <title>Portafolio Milfer Antonio Muñoz</title>
+      <title>Portafolio Milfer Muñoz</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta
          name="description"
