Modifico etiqueta img

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                            <img
                               class="logo logo-3"
                               src="/public/images/habilidades/Logo.png"
-                              alt=""
+                              alt="img-milfer"
                            />
                            <div id="logo-1 logo-3">
                               <img
                                  class="logo-2"
                                  src="/public/images/habilidades/Logo.png"
-                                 alt=""
+                                 alt="img-milfer"
                               />
                            </div>
                         </a>
