--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <!-- color scheme -->
       <link rel="stylesheet" href="css/colors/scheme-5.css" type="text/css" />
-      <link rel="stylesheet" href="/public/css/portafolio.css" />
+      <link rel="stylesheet" href="./css/portafolio.css" />
    </head>
 
    <body id="homepage">
@@ -46,13 +46,13 @@
                         <a href="#wrapper">
                            <img
                               class="logo logo-3"
-                              src="/public/images/habilidades/Logo.png"
+                              src="images/habilidades/Logo.png"
                               alt="img-milfer"
                            />
                            <div id="logo-1 logo-3">
                               <img
                                  class="logo-2"
-                                 src="/public/images/habilidades/Logo.png"
+                                 src="images/habilidades/Logo.png"
                                  alt="img-milfer"
                               />
                            </div>
